<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_One">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:gravity="center_horizontal"
                    android:paddingTop="@dimen/layout_paddingTop_One"
                    android:paddingBottom="@dimen/layout_paddingBottom_One"
                    android:text="@string/team_A_Name"
                    android:textStyle="bold"
                    android:textColor="@color/team_A_Text"
                    android:textSize="@dimen/text_Size_One" />

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/bears"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:gravity="center_horizontal"
                    android:paddingBottom="@dimen/layout_paddingBottom_Two"
                    android:textColor="@color/score_Text"
                    android:textSize="@dimen/text_Size_Two"
                    android:freezesText="true"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_marginLeft_One"
                    android:layout_marginRight="@dimen/layout_marginRight_One"
                    android:layout_marginTop="@dimen/layout_marginTop_Two"
                    android:textColor="@color/color_Text_One"
                    android:onClick="addSixForTeamA"
                    android:text="@string/touchdown_Six"
                    android:background="@color/background_Button"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_marginLeft_One"
                    android:layout_marginRight="@dimen/layout_marginRight_One"
                    android:layout_marginTop="@dimen/layout_marginTop_Two"
                    android:textColor="@color/color_Text_One"
                    android:onClick="addThreeForTeamA"
                    android:background="@color/background_Button"
                    android:text="@string/field_Goal" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_marginLeft_One"
                    android:layout_marginRight="@dimen/layout_marginRight_One"
                    android:layout_marginTop="@dimen/layout_marginTop_Two"
                    android:onClick="addTwoForTeamA"
                    android:textColor="@color/color_Text_One"
                    android:background="@color/background_Button"
                    android:text="@string/safety_Conversion"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_marginLeft_One"
                    android:layout_marginRight="@dimen/layout_marginRight_One"
                    android:layout_marginTop="@dimen/layout_marginTop_Two"
                    android:onClick="addOneForTeamA"
                    android:textColor="@color/color_Text_One"
                    android:background="@color/background_Button"
                    android:text="@string/extra_Point"/>
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/layout_marginTop_One"
                android:background="@color/color_Text_One"></View>

            <LinearLayout
                android:layout_width="0dp"
                android:id="@+id/layout"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:gravity="center_horizontal"
                    android:paddingTop="@dimen/layout_paddingTop_One"
                    android:paddingBottom="@dimen/layout_paddingBottom_One"
                    android:textStyle="bold"
                    android:textColor="@color/team_B_Text"
                    android:textSize="@dimen/text_Size_One"
                    android:text="@string/team_B_Name" />

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/packers"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:gravity="center_horizontal"
                    android:paddingBottom="@dimen/layout_paddingBottom_Two"
                    android:textColor="@color/score_Text"
                    android:textSize="@dimen/text_Size_Two"
                    android:freezesText="true"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_marginLeft_One"
                    android:layout_marginRight="@dimen/layout_marginRight_One"
                    android:layout_marginTop="@dimen/layout_marginTop_Two"
                    android:textColor="@color/color_Text_One"
                    android:onClick="addSixForTeamB"
                    android:text="@string/touchdown_Six"
                    android:background="@color/background_Button_Two"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_marginLeft_One"
                    android:layout_marginRight="@dimen/layout_marginRight_One"
                    android:layout_marginTop="@dimen/layout_marginTop_Two"
                    android:textColor="@color/color_Text_One"
                    android:background="@color/background_Button_Two"
                    android:onClick="addThreeForTeamB"
                    android:text="@string/field_Goal" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_marginLeft_One"
                    android:layout_marginRight="@dimen/layout_marginRight_One"
                    android:layout_marginTop="@dimen/layout_marginTop_Two"
                    android:textColor="@color/color_Text_One"
                    android:background="@color/background_Button_Two"
                    android:onClick="addTwoForTeamB"
                    android:text="@string/safety_Conversion"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_marginLeft_One"
                    android:layout_marginRight="@dimen/layout_marginRight_One"
                    android:layout_marginTop="@dimen/layout_marginTop_Two"
                    android:textColor="@color/color_Text_One"
                    android:background="@color/background_Button_Two"
                    android:onClick="addOneForTeamB"
                    android:text="@string/extra_Point"/>
            </LinearLayout>


        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/layout_marginBottom_One"
            android:layout_marginLeft="@dimen/layout_marginLeft_One"
            android:textColor="@android:color/white"
            android:layout_marginRight="@dimen/layout_marginRight_One"
            android:onClick="resetScore"
            android:background="@color/background_Button_Reset"
            android:text="@string/reset" />

    </RelativeLayout>

</ScrollView>